# hokuyohub

./: .dockerignore  .gitignore  .gitmodules  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile.arm64-build  QUICK_START.md  README-DEVELOPERS.md  README.md  package.json  vcpkg.json
.github/workflows/: build.yml  docker-matrix-build.yml
cmake/: Dependencies.cmake  check_file_exists.cmake  debug_build_command.cmake  display_log.cmake  list_directory.cmake
cmake/test_sources/: test_compile.c
cmake/toolchains/: README.md  common.cmake  jsoncpp-config.cmake  linux-arm64.cmake  rpi.cmake  windows-x64.cmake
configs/: default.yaml  example_with_features.yaml  production.yaml  test_multi_sinks.yaml
docker/: Dockerfile.rpi  Dockerfile.rpi.fixed  Dockerfile.rpi.optimized  Dockerfile.rpi.optimized.v2  Dockerfile.rpi.rebuild  README.md  build.sh  docker-compose.yml
docs/: CROWCPP_MIGRATION.md  DOCKER_BUILD_RESULTS.md  DOCKER_BUILD_TEST_RESULTS.md  DOCKER_USAGE.md  PHASE2_CROSS_COMPILATION.md  README.md  implementation-plans.md  phase0-change-management.md  sink-hot-reload-phase1.md
docs/deployment/: SERVER_RESTART_SETUP.md
docs/development/: 開発者ガイド.md
docs/development/plans/: サーバアプリ再起動機能（未保存確認・サービス前提）.md  通信リザルト表示の精査.md
docs/legacy/: BUILD_PROCEDURES.md  CROSS_COMPILATION_FIXES.md  DOCKER_BUILD_RESULTS.md  DOCKER_BUILD_TEST_RESULTS.md  PHASE1_BUILD_SYSTEM.md  PHASE3_VALIDATION_REPORT.md  README.md  implementation-plans.md  phase0-change-management.md  phase0-directory-structure.md  レガシー情報.md
docs/plans/: 01-mask-angle-unit.md  01-ポイント表示既定化.md  02-pipe-dbscan-integration.md  02-フィルタ初期値を決める.md  03-dbscan-impl.md  03-ズーム範囲を変更.md  04-DBSCANを畳めるようにする.md  04-rest-api.md  05-nng-bus.md  05-レイアウト変更（狭幅時はcanvas→左→右）.md  06-ROIの数値編集を可能にする.md  06-sensor-manager-stop.md  07-hokuyo-live-reconfig.md  08-config-default.md  09-SensorsのRefreshボタンを削除.md  09-validation-hardening.md  10-FilterのReset to Defaultボタンを削除.md  10-webui-enhancements.md  11-Sensor詳細保存後の挙動不具合（angle step 等）.md  11-tests.md  12-Sinkのaccordion-header文言変更.md  13-NNGのencodingを正しく実装.md  15-Osc Sinkの詳細の縦幅調整.md  2025-08-18_implementation-plans.md  2025-08-18_sink-multi-sinks-plan.md  2025-08_sink-info-to-browser.md  browser-feature-expansion.md  cluster-point-indices.md  implementation-summary.md  nng_publisher.md  noise_filter.md  osc_publisher.md  plan-layout-update.md  rest_api.md  roi_filter.md  topic購読の実装を検討.md  webui_refactor_instructions.md
scripts/: README.md  baseline_verification.sh  build_with_presets.sh  cross_build.sh  extract_docker_artifacts.sh  fix_vs2019_toolset.py  preset_build.sh  regression_check.sh  restart_backend.sh  restart_with_args.bat  restart_with_args.sh  run_macos.command  start_backend.sh  start_system.sh  start_webui.sh  stop_system.sh  test_rest_api.sh
scripts/dev/: start_dev.sh
scripts/install/: install.sh
scripts/legacy/: cross_build.sh
scripts/ops/: backup_config.sh  collect_logs.sh  health_check.sh  monitor.sh  restore_config.sh
scripts/optimize/: optimize_system.sh
scripts/package/: create_release.sh
scripts/setup/: setup_cross_compile.sh
scripts/testing/: test_rest_api.sh  test_server_restart.sh
scripts/utils/: extract_docker_artifacts.sh  preset_build.sh
scripts/win/: README.txt  start.bat
src/: main.cpp
src/config/: config.cpp  config.h  config.hpp
src/core/: filter_manager.cpp  filter_manager.h  hokuyo_scip.cpp  hokuyo_scip.hpp  mask.cpp  mask.h  mask.hpp  sensor_manager.cpp  sensor_manager.h  sensor_manager.hpp  transform.h  transform.hpp
src/detect/: dbscan.cpp  dbscan.h  dbscan.hpp  postfilter.cpp  postfilter.h  prefilter.cpp  prefilter.h
src/io/: nng_bus.cpp  nng_bus.h  nng_bus.hpp  osc_publisher.cpp  osc_publisher.h  publisher_manager.cpp  publisher_manager.h  rest_handlers.cpp  rest_handlers.h  rest_handlers.hpp  ws_handlers.cpp  ws_handlers.h  ws_handlers.hpp
src/sensors/: ISensor.h  SensorFactory.cpp  SensorFactory.h
src/sensors/hokuyo/: HokuyoSensorUrg.cpp  HokuyoSensorUrg.h
tests/final/: generate_report.sh
tests/integration/: test_system.sh
tests/performance/: performance_test.sh
tests/qa/: quality_checklist.sh
validation/: comparison.txt
validation/preset-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  hokuyo_hub  install_manifest.txt
validation/preset-build/urg_library_proj-prefix/src/urg_library_proj-stamp/: urg_library_proj-build-Release.cmake  urg_library_proj-source_dirinfo.txt
validation/preset-build/urg_library_proj-prefix/tmp/: urg_library_proj-mkdirs.cmake
validation/preset-dist/: hokuyo_hub
validation/preset-dist/config/: default.yaml
validation/preset-dist/webui/: index.html  styles.css
validation/preset-dist/webui/js/: app.js  dbscan.js  sinks.js  store.js  utils.js
webui/: app.js  index.html  styles.css
webui-server/: package-lock.json  package.json  server.js
webui-server/config/: proxy-config.json
webui-server/public/: index.html
webui-server/public/css/: backend-control.css
webui-server/public/js/: api.js  app.js  backend-control.js  configs.js  filters.js  roi.js  sinks.js  types.js  ws.js
webui-server/scripts/: install.sh  start.sh
webui/js/: api.js  app.js  canvas.js  configs.js  sensors.js  sinks.js  store.js  types.js
